--- a/src/EMRG/Web/Areas/Admin/Pages/Students/Index.cshtml
+++ b/src/EMRG/Web/Areas/Admin/Pages/Students/Index.cshtml
@@ -79,7 +79,7 @@
                     </a> |
                     <a asp-page="./CourseEnrollment"
                        asp-route-id="@item.Id">
-                        Delete
+                        Enrollment
                     </a>
                 </td>
             </tr>
