--- a/src/EMRG/Web/Areas/StudentZone/Pages/Shared/_Sidebar.cshtml
+++ b/src/EMRG/Web/Areas/StudentZone/Pages/Shared/_Sidebar.cshtml
@@ -1,19 +1,21 @@
 ﻿<div class="bg-light border-right" id="sidebar-wrapper">
     <div class="sidebar-heading">Student Panel</div>
     <div class="list-group list-group-flush">
-        <a asp-area="Admin" asp-page="#"
+        <a asp-area="StudentZone" asp-page="/Enrollments/Index"
            class="list-group-item list-group-item-action bg-light">
             Advising
         </a>
-        <a asp-area="Admin" asp-page="#"
+        <a asp-area="StudentZone" asp-page="/Sections/Index"
+           class="list-group-item list-group-item-action bg-light">
+            Section List
+        </a>
+        <a asp-area="StudentZone" asp-page="#"
            class="list-group-item list-group-item-action bg-light">
             Schedule
         </a>
-        <a asp-area="Admin" asp-page="#"
+        <a asp-area="StudentZone" asp-page="#"
            class="list-group-item list-group-item-action bg-light">
             Result
         </a>
-    
     </div>
-        
 </div>
