--- a/src/EMRG/Web/Areas/Admin/Pages/Courses/Prerequisites.cshtml
+++ b/src/EMRG/Web/Areas/Admin/Pages/Courses/Prerequisites.cshtml
@@ -4,23 +4,23 @@
 }
 
 
-<h1>Add Prerequisites</h1>
+<h1>Add Prerequisites for @Model.Course.Code</h1>
+<div class="row">
+    <form method="post" class="col-6">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-<form method="post">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
+        <select asp-for="Prerequisite.PrerequisiteId" class="selectpicker form-control"
+                data-width="100%" asp-items="ViewBag.CoursesId" id="mySelect"
+                data-live-search="true"></select>
 
-    <select asp-for="Prerequisite.PrerequisiteId" class="selectpicker form-control"
-            data-width="100%" asp-items="ViewBag.CoursesId" id="mySelect"
-            data-live-search="true"></select>
+        <input type="submit" value="Save" class="btn btn-primary mt-2" />
 
-    <input type="submit" value="Save" class="btn btn-primary" />
-
-    <input type="hidden" asp-for="Course.Id" />
-    <br />
-    <br />
-</form>
-
+        <input type="hidden" asp-for="Course.Id" />
+        <br />
+        <br />
+    </form>
+</div>
 <h4>Prerequisites :</h4>
 
 <table class="table table-striped table-hover" id="compolsoryTable">
