--- a/src/EMRG/Web/Areas/Admin/Pages/Sections/Index.cshtml
+++ b/src/EMRG/Web/Areas/Admin/Pages/Sections/Index.cshtml
@@ -32,6 +32,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.Section[0].Seat)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Section[0].Schedule.TimeSlots[0].DayOfWeek)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Section[0].Schedule.TimeSlots[0].StartTime)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -56,6 +62,16 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Seat)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Schedule.TimeSlots[0].DayOfWeek)<br />
+
+                @Html.DisplayFor(modelItem => item.Schedule.TimeSlots[1].DayOfWeek)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Schedule.TimeSlots[0].StartTime) <br />
+
+                @Html.DisplayFor(modelItem => item.Schedule.TimeSlots[1].StartTime)
             </td>
             <td class="text-right">
                 <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
