--- a/src/EMRG/Web/Areas/StudentZone/Pages/Enrollments/Index.cshtml
+++ b/src/EMRG/Web/Areas/StudentZone/Pages/Enrollments/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
-@model Web.Areas.Admin.Pages.Students.CourseEnrollmentModel
-@{
-}
+@model Web.Areas.StudentZone.Pages.Enrollments.IndexModel
+
+<h3>@ViewData["Title"]</h3>
 
 <h1>@Model.Student.FullName</h1>
 <br />
@@ -10,8 +10,7 @@
     <div class="form-group">
         <label asp-for="Semesters" class="form-label"></label>
         <select asp-for="Semester.Id" class="form-control" asp-items="ViewBag.SemesterId"
-                id="semesterDropDown"
-                onchange="getSections()"></select>
+                id="semesterDropDown"></select>
     </div>
 
     <div class="form-group">
@@ -38,10 +37,15 @@
         <label class="form-label">Seats Available :</label>
         <label class="form-label" id="seatCount"></label>
     </div>
-    <br />
-    <input type="submit" value="Save" class="btn btn-primary" id="submitButton"/>
 
-    <input type="hidden" asp-for="Student.Id" />
+    <div class="form-group">
+        <label id="timeSlot1"></label>
+        <label id="timeSlot2"></label>
+    </div>
+    <br />
+    <input type="submit" value="Save" class="btn btn-primary" id="submitButton" />
+
+    <input type="hidden" asp-for="Student.Id" id="studentId"/>
 </form>
 <br />
 <table class="table table-striped table-hover" id="compolsoryTable">
@@ -57,10 +61,16 @@
                 @Html.DisplayNameFor(model => model.Course.Credits)
             </th>
             <th>
-                @Html.DisplayNameFor(model=>model.Enrollment.Section.Number)
+                @Html.DisplayNameFor(model => model.Enrollment.Section.Number)
             </th>
             <th>
-                @Html.DisplayNameFor(model=> model.Enrollment.Section.Semester.Season)
+                @Html.DisplayNameFor(model => model.Enrollment.Section.Semester.Season)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Enrollment.Section.Schedule.TimeSlots[0].DayOfWeek)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Enrollment.Section.Schedule.TimeSlots[0].StartTime)
             </th>
             <th></th>
         </tr>
@@ -69,24 +79,32 @@
     <tbody>
         @foreach (var enrollment in Model.Student.Enrollments)
         {
-            <tr>
-                <td>@enrollment.Section.Course.Code</td>
-                <td>@enrollment.Section.Course.Name</td>
-                <td>@enrollment.Section.Course.Credits</td>
-                <td>@enrollment.Section.Number</td>
-                <td>@enrollment.Section.Semester.Season @enrollment.Section.Semester.Year</td>
+        <tr>
+            <td>@enrollment.Section.Course.Code</td>
+            <td>@enrollment.Section.Course.Name</td>
+            <td>@enrollment.Section.Course.Credits</td>
+            <td>@enrollment.Section.Number</td>
+            <td>@enrollment.Section.Semester.Season @enrollment.Section.Semester.Year</td>
+            <td>
+                @Html.DisplayFor(model => enrollment.Section.Schedule.TimeSlots[0].DayOfWeek) <br />
+                @enrollment.Section.Schedule.TimeSlots[1].DayOfWeek
+            </td>
+            <td>
+                @Html.DisplayFor(model => enrollment.Section.Schedule.TimeSlots[0].StartTime) <br />
+                @Html.DisplayFor(model => enrollment.Section.Schedule.TimeSlots[1].StartTime)
+            </td>
 
-                <td>
-                    <form method="post">
-                        <input type="hidden" asp-for="Enrollment.Id" value="@enrollment.Id" />
-                        <input type="hidden" asp-for="Student.Id" />
+        <td>
+            <form method="post">
+                <input type="hidden" asp-for="Enrollment.Id" value="@enrollment.Id" />
+                <input type="hidden" asp-for="Student.Id" />
 
-                        <input type="submit" value="Remove"
-                               class="btn btn-primary btn-danger"
-                               asp-page-handler="DeleteEnrollment" />
-                    </form>
-                </td>
-            </tr>
+                <input type="submit" value="Remove"
+                       class="btn btn-primary btn-danger"
+                       asp-page-handler="DeleteEnrollment" />
+            </form>
+        </td>
+        </tr>
         }
     </tbody>
 </table>
@@ -94,7 +112,7 @@
 
 
 <script>
-    var id = window.location.toString().split('=')[1];
+    var id = document.getElementById('studentId').value;
     var button = document.getElementById('submitButton');
     button.disabled = true;
 
@@ -164,7 +182,7 @@
                             } else {
                                 nextFetch = 1;
                             }
-                            
+
 
                             for (i = output.options.length; i >= 0; i--) {
                                 output.remove(i);
@@ -188,7 +206,7 @@
                             }
                         })
                 }
-            
+
             })
 
         }
@@ -196,21 +214,21 @@
     function getSeats() {
         var dd = document.getElementById('sectionDropDown');
         document.getElementById('sectionValidation')
-                            .innerHTML = "";
-        fetch('/api/Section/' + dd.value)
+                                .innerHTML = "";
+        fetch('http://' + window.location.hostname + ':' + window.location.port+ '/api/Section/' + dd.value)
             .then((response) => response.json())
             .then((data) => {
-                
+
                 let output = document.getElementById('seatCount');
                 output.innerHTML = data.seat;
 
                 var selectedSection = data;
                 var timeSlots = data.schedule.timeSlots;
 
-                fetch('/api/Students/' + id)
+                fetch('http://' + window.location.hostname + ':' + window.location.port + '/api/Students/' + id)
                     .then((response) => response.json())
                     .then((data) => {
-                        
+
                         for (i = 0; i < data.sections.length; i++) {
                             var section = data.sections[i];
                             for (j = 0; j < section.schedule.timeSlots.length; j++) {
@@ -224,16 +242,15 @@
                                             document.getElementById('sectionValidation')
                                                 .innerHTML = "Section Time Conflicts";
                                             button.disabled = true;
-
-                                             return;
+                                            return;
                                         }
-                                       
+
                                     }
                                 }
                             }
                         }
                         button.disabled = false;
-
+                        
                     })
             })
     }
